# bonsai

./: .gitignore  Cargo.toml  README.md  build.sh  main.cpp  run.sh  vec3.h
scenes/: sphere.toml
src/: aabb.h  aarect.h  box.h  bssrdf.rs  bvh.h  camera.h  camera.rs  color.h  constant_medium.h  efloat.rs  film.rs  float.rs  hittable.h  hittable_list.h  interaction.rs  lib.rs  main.cpp  main.rs  material.h  material.rs  math.rs  medium.rs  moving_sphere.h  object.rs  onb.h  pdf.h  perlin.h  primitive.rs  ray.h  ray.rs  reflection.rs  renderer.rs  shape.rs  sphere.h  texture.h  texture.rs  transform.rs  utils.h  vec3.h  vertex.rs
src/accelerators/: bvh.rs
src/base/: aggregate.rs  bsdf.rs  bxdf.rs  camera.rs  constants.rs  efloat.rs  film.rs  filter.rs  fresnel.rs  geometry.rs  integrator.rs  interaction.rs  light.rs  material.rs  math.rs  microfacet.rs  mipmap.rs  mod.rs  primitive.rs  renderer.rs  rng.rs  sampler.rs  sampling.rs  scene.rs  shape.rs  spectrum.rs  texture.rs  transform.rs
src/bxdfs/: fresnel.rs  fresnel_specular.rs  lambertian.rs  lambertian_reflection.rs  lambertian_transmission.rs  microfacet.rs  mod.rs  oren_nayer.rs  scaled.rs  specular.rs  specular_reflection.rs  specular_transmission.rs
src/cameras/: environment.rs  mod.rs  orthographic.rs  perspective.rs  projective.rs
src/filters/: box.rs  gaussian.rs  mitchell.rs  mod.rs  sinc.rs  triangle.rs
src/geometries/: animated_transform.rs  bounds2.rs  bounds3.rs  interaction.rs  interval.rs  mat4.rs  mod.rs  normal.rs  point2.rs  point3.rs  quaternion.rs  ray.rs  transform.rs  vec2.rs  vec3.rs
(+65 files in other folders)
