[package]
name = "pat"
version = "0.1.0"
authors = ["Kazi Jawad"]
edition = "2021"

[features]
float-as-double = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"
clap = { version = "4.0.29", features = ["derive"] }
image = "0.24.5"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.6.0"
toml = "0.5.9"
serde = { version = "1.0.149", features = ["derive"] }
