[package]
name = "bonsai"
version = "0.1.0"
authors = ["Kazi Jawad"]
edition = "2021"

[features]
float-precision = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"
dyn-clone = "1.0.10"
image = "0.24.5"
itertools = "0.10.5"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.6.0"
